六期功能完成